# rut

./: .ackrc  .gitignore  API.md  CHANGES  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.txt  cov.py  dodo.py  llms-full.txt  pyproject.toml  run_tests.sh  setup.cfg  uv_unreleased.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
claude-skill/: SKILL.md
demo/: README.md  movie-script.md  pyproject.toml
demo/finance/: account.py  currency.py  report.py  transaction.py  utils.py
demo/tests/: test_account.py  test_currency.py  test_report.py  test_transaction.py  test_utils.py
docs/: _config.yml  index.md
docs/_includes/: head-custom.html
docs/_layouts/: article.html
docs/articles/: dependency-ordering.md  incremental-testing.md  why-tests-matter-for-ai-coding.md
docs/assets/css/: style.scss
examples/: README.md
examples/async/: README.md  async_service.py
examples/async/tests/: test_async_service.py
examples/basic/: README.md  calculator.py
examples/basic/tests/: test_calculator.py
llm/: README.md  llms-full.txt  llms.txt
llm/claude-plugin/.claude-plugin/: plugin.json
llm/claude-plugin/skills/rut-testing/: REFERENCE.md  SKILL.md
manual_tests/: README.md  test_diff_output.py  test_import_fail.py  test_logging_leak.py  test_output_leak.py  test_traceback_clean.py
manual_tests/test_incremental/: helper.py  test_main.py  util.py
samples/: test_sample.py
src/: .gitignore
src/rut/: __init__.py  __main__.py  case.py  checker.py  collect.py  ctl.py  reporter.py  runner.py  saq.py
src/rutlib/: __init__.py  __main__.py  cache.py  cli.py  output.py  runner.py
tests/: sample_tests.py  test_cache.py  test_case.py  test_checker.py  test_cli.py  test_collect.py  test_ctl.py  test_output.py  test_reporter.py  test_runner.py  test_rut.py  test_saq.py  util.py
tests/sample_proj/: dumb.py
tests/sample_proj/my_proj/: test_bar.py  test_foo.py
tests/sample_proj/proj_inplace/: test_foo.py
tests/sample_proj/proj_split/tests/: test_foo.py
tests/samples/: conftest.py  my_specific_module.py  sample_invalid_async.py  sample_valid_async.py  test_hook_check.py
tests/samples/config/: pyproject.toml
tests/samples/discovery/: sample_one.py  sample_two.py
tests/samples/topo/: test_apple.py  test_middle.py  test_zebra.py
