[project]
name = "rut"
version = "0.2.1"
description = "A test runner for python unittest with async support."
authors = [{ name = "Eduardo Naufel Schettino", email = "schettino72@gmail.com" }]
dependencies = [
    "coverage"
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["test", "unittest", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
"Homepage" = "https://github.com/schettino72/rut"
"Source" = "https://github.com/schettino72/rut"


[project.scripts]
rut = "rutlib.__main__:main"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "coverage>=7.9.2",
    "ruff>=0.12.2",
    "twine>=6.1.0",
]
