[project]
name = "rut"
version = "1.0.0"
description = "A modern test runner for Python's unittest framework with async support."
authors = [{ name = "Eduardo Naufel Schettino", email = "schettino72@gmail.com" }]
dependencies = [
    "coverage",
    "rich>=14.0.0",
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["test", "unittest", "async", "testing", "test-runner"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
"Homepage" = "https://github.com/schettino72/rut"
"Source" = "https://github.com/schettino72/rut"


[project.scripts]
rut = "rutlib.__main__:main"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "coverage>=7.9.2",
    "pyright>=1.1.405",
    "ruff>=0.12.2",
    "twine>=6.1.0",
]
