[project]
name = "rut"
version = "0.3.0"
description = "A test runner for python unittest with async support."
authors = [{ name = "Eduardo Naufel Schettino", email = "schettino72@gmail.com" }]
dependencies = [
    "coverage",
    "import-deps>=0.5.1",
    "rich>=14.0.0",
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["test", "unittest", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
"Homepage" = "https://schettino72.github.io/rut/"
"Documentation" = "https://github.com/schettino72/rut#readme"
"Source" = "https://github.com/schettino72/rut"


[project.scripts]
rut = "rutlib.__main__:main"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "coverage>=7.9.2",
    "pyright>=1.1.405",
    "ruff>=0.12.2",
    "twine>=6.1.0",
]

[tool.rut]
source_dirs = ["src", "tests", "manual_tests"]

[tool.uv]
package = true

[tool.uv.sources]
import-deps = { path = "/home/eduardo/work/import-deps", editable = true }
rut = { path = ".", editable = true }
