[metadata]
name = rut
version = 0.1.0
author = Eduardo Naufel Schettino
author_email = schettino72@gmail.com
description = rut - Run Unit Tests
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/schettino72/rut
# project_urls =
#     Source = https://github.com/schettino72/rut
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Development Status :: 1 - Planning

[options]
python_requires = >=3.8
package_dir =
    = src
packages = rut

[options.entry_points]
console_scripts =
    rut = rut.__main__:main


[pycodestyle]

# E266 too many leading '#' for block comment
# E301 expected 1 blank line
# E302: expected 2 blank lines
# E303: too many blank lines
# E305: expected 2 blank lines after class or function definition
# E306: expected 1 blank line before a nested definition
# E731: do not assign lambda
# W503: line break before binary operator
ignore = E266, E301, E302, E303, E305, E306, E731, W503
max-line-length = 90
